first-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: test
  labels:
    app: web
spec:
  containers:
  - name: web
    image: nginx
  - name: centos
    image: centos
    command: ["/bin/sh", "-c", "while : ;do curl http://localhost:80/; sleep 1000; done"]
