pods-with-configmap-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web2
  namespace: test
  labels:
    app: web2
spec:
  containers:
  - name: centos
    image: centos
    command: ["/bin/sh", "-c", "while : ;do curl http://localhost:80/; sleep 100; done"]
  - name: web
    image: nginx
    volumeMounts:
    - name: index
      mountPath: /usr/share/nginx/html/index.html
      subPath: index.html
      readOnly: true
    - name: config
      mountPath: /etc/nginx/conf.d/default.conf
      subPath: nginx-config.conf
      readOnly: true
  volumes:
    - name: index
      configMap:
        name: nginx-config
        items:
          - key: index.html
            path: index.html
    - name: config
      configMap:
        name: nginx-config
        items:
          - key: nginx-config.conf
            path: nginx-config.conf
