service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: test
spec:
  type: ClusterIP
  ports:
  - port: 800
    targetPort: 80
  selector:
    app: web
