service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-node-port
  namespace: test
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30800
  selector:
    app: web
